# again

./: .env  .gitignore  Cargo.toml  qqq  sword VARCHAR(255) NOT NULL,
api/: Cargo.toml
api/src/: auth.rs  lib.rs  main.rs
api/src/handlers/: mod.rs
api/src/handlers/announcement/: create_announcement.rs  delete.rs  get_announcement.rs  list_announcement.rs  mod.rs  update_announcement.rs
api/src/handlers/auth/: login.rs  register.rs
api/src/handlers/club/: create_club.rs  delete_club.rs  get_club.rs  list_clubs.rs  mod.rs  update_club.rs
api/src/handlers/community/: create_community.rs  delete_community.rs  get_community.rs  list_communities.rs  mod.rs  update_community.rs
api/src/jwt/: create_jwt.rs  mod.rs  validate_jwt.rs
api/src/models/: Ama_pool_struct.rs  Announcement_struct.rs  Discussion_struct.rs  Post_struct.rs  Rsvp_struct.rs  Team_struct.rs  Tournament_struct.rs  User_struct.rs  ama_poolStruct.rs  ama_pool_struct.rs  announcementStruct.rs  announcement_struct.rs  clubStruct.rs  club_struct.rs  comment_struct.rs  communitieStruct.rs  discussionStruct.rs  discussion_struct.rs  eventStruct.rs  event_struct.rs  jwtStruct.rs  jwt_struct.rs  mod.rs  oldddd_post_struct.rs  postStruct.rs  post_struct.rs  rsvp_struct.rs  team_struct.rs  tournamentStruct.rs  userStruct.rs  user_struct.rs  walletStruct.rs
api/src/routes/: ___old_route.rs  announcement.rs  auth.rs  club.rs  community.rs  discussion.rs  event.rs  mod.rs  post.rs  route.rs  team.rs  user.rs
database/: Cargo.toml  connect_to_db.rs
database/src/: connect_to_db.rs  lib.rs
(+210 files in other folders)
